--- a/config/database.yml
+++ b/config/database.yml
@@ -3,11 +3,18 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#
+
 default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+
+#default: &default
+#  adapter: postgresql
+#  encoding: unicode
+#  host: localhost
+#  username: postgres
+#  password: postgres
 
 development:
   <<: *default
